--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "gethr"]
+	path = gethr
+	url = https://github.com/vicegd/gethr
+	shallow = true
+	registered = true
